--- a/_posts/blog/2014-09-16-test.md
+++ b/_posts/blog/2014-09-16-test.md
@@ -8,3 +8,6 @@ title: test 2
 ## A New Post
 
 Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+
+
+*test*
