--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -48,7 +48,7 @@ description: My resume
 - 框架和库：Flask/Restful/Pymongo
 - 数据库：    MongoDB/MySQL
 - 技术研究：Machine Learning/Recommend System
-- 版本管理、文档和自动化部署工具：Svn/Git/Markdown/Sphinx
+- 版本管理、文档和自动化部署工具：Svn/Git/Markdown/Sphinx/JIRA/Jenkins/Confluence
 
 
 开源项目
