--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -46,7 +46,7 @@ description: My resume
 - 操作系统：Linux/Mac/Windows
 - 编程语言：Python/Erlang/C/C++/JS/HTML/CSS
 - 框架和库：Flask/Restful/Pymongo
-- 数据库：    MongoDB/MySQL
+- 数据库：  MongoDB/MySQL
 - 技术研究：Machine Learning/Recommend System
 - 版本管理、文档和自动化部署工具：Svn/Git/Markdown/Sphinx/JIRA/Jenkins/Confluence
 
@@ -97,6 +97,12 @@ description: My resume
 
 - 最佳新人奖
 - 公司炒股大赛
+
+
+自我描述
+---
+---  
+
 
 
 致谢
