--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -33,7 +33,7 @@ description: My resume
 #### 交易策略分享社区   
 我在此项目中一人负责社区后端开发。社区主要提供交易策略的分享和交流的平台，目标是做到金融界的github。
 
-key words：安全，soa，策略推荐，线索推荐，做社区的感想，消息通知，分享［微信，微博，领英］，
+key words：安全，soa，策略推荐，线索推荐，做社区的感想，消息通知，分享［微信，微博，领英］，扩展性，模块性
 
 #### Z-Score模型研究和开发  
 我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
