--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -35,9 +35,9 @@ description: My resume
 我在此项目中一人负责社区后端开发。社区主要提供交易策略的分享和交流的平台，目标是做到金融界的github。
 
 key words：安全，soa，策略推荐，线索推荐，做社区的感想，消息通知，分享［微信，微博，领英］，扩展性，模块性
-		   性能测试，erlang写的并发测试脚本，分析瓶颈，数据收集，瓶颈展示，抽样调查，
+		   性能测试，erlang写的并发测试脚本，分析瓶颈，数据收集，瓶颈展示，抽样调查，消息广播，
 		   数据库和缓存的安排：数据库放置原始数据、有价值的数据；缓存里放置热点数据，具有生命周期的数据，
-		   生命周期短的数据, 高频操作的无大价值的数据；flask-admin 实现后台监控;
+		   生命周期短的数据, 高频操作的无大价值的数据；flask-admin 实现后台监控;数据库迁移；
 
 #### Z-Score模型研究和开发  
 我在此项目负责了哪些工作，分别在哪些地方做得出色/和别人不一样/成长快，这个项目中，我最困难的问题是什么，我采取了什么措施，最后结果如何。这个项目中，我最自豪的技术细节是什么，为什么，实施前和实施后的数据对比如何，同事和领导对此的反应如何。
