--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -104,3 +104,10 @@ description: My resume
 --- 
 
 感谢您花时间阅读我的简历，期待能有机会与您共事。
+
+
+PDF 版下载
+---  
+--- 
+
+谢谢，下载地址[resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
