update, add blog

--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -111,3 +111,11 @@ PDF 版下载
 --- 
 
 谢谢，下载地址[resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
+
+
+PS: 所有联系方式  
+---  
+--- 
+邮件： litaotao#vip.163.com   
+微信： charles_be_good   
+电话： 哈哈，麻烦你邮件问我咯~~~  
