--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -69,6 +69,11 @@ description: My resume
 ### [git-statistic](http://github.com/litaotao/git-statistic) 
 - 准备用git开放API来做一些技术、趋势统计分析相关的工作，正在开展中。
 
+技术分享  
+---  
+---
+- [Spark Fire](../files/spark-fire.ppt)
+
 
 业余爱好
 ---  
