--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -13,7 +13,6 @@ description: My resume
 - 手机：18202171279  
 - Email：litaotao#vip.163.com  
 
-
 个人信息
 ---  
 ---
@@ -28,16 +27,13 @@ description: My resume
 工作经历
 ---  
 ---
-
 ### 通联数据股份公司 ( 2014年4月 ~  )
 
 #### 交易策略分享社区   
 我在此项目中一人负责社区后端开发。社区主要提供交易策略的分享和交流的平台，目标是做到策略投资界的github。项目的难点是策略关系的处理和缓存系统的设计。此外，采用开源模块实现了后台管理系统，管理员可以实时看到社区中用户数据和策略的相关元数据。此项目还在进行中，有诸多地方需要持续实践和改善。
 
-
 #### 通联信用评级
 我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
-
 
 技能清单
 ---  
@@ -51,17 +47,14 @@ description: My resume
 - 技术研究：Spark/Machine Learning/Recommend System 
 - 项目管理：Svn/Git/Markdown/JIRA/Jenkins/Confluence
 
-
 开源项目
 ---  
 ---
 
 ### [Magnet](http://github.com/litaotao/Magnet)
 > * *Magnet : There are endless magnet lines in the magnet field, each of them has different direction and force, invisible but sensible, just like something that connect everyone in this world* 
-
 > * *Relation : Relation is something that around everyone in their whole life, it's so important but we cannot manage our relation effectively nowadays,not merely because it's unmeasurable and untouchable, but we still didn't find a simple but effective tool to help us.*
->
-> * *What mentioned above is the reason why I create this project, it aims to help people:*
+> * *What mentioned above is the reasons why I create this project, it aims to help people:*
 > * *Maintain your past : That's help us to keep in touch with people we ever know but almost out of your memory*
 > * *Strengthen your present : That's help us to strengthen our relationship with people whose name you can come up in mind now*
 > * *Discover your future : That's the magic of this project, it help us to find or discover people around you who share the same insterests, hobbies, skills or anything else.*
@@ -73,7 +66,6 @@ description: My resume
 ---  
 ---
 - [Spark Fire](../files/spark-fire.ppt)
-
 
 业余爱好
 ---  
@@ -87,12 +79,10 @@ description: My resume
 - 跑步
 - 技术研究 
 
-
 曾获荣誉
 ---  
 ---  
 - 【通联数据股份公司】2014年Q2季度最佳新人奖;
-
 
 自我描述
 ---
@@ -102,7 +92,6 @@ description: My resume
 我热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
 我希望能在一个充满活力，文化开放的环境里工作，成长；   
 我希望能和最优秀的人才共事，希望大家在工作中是互相学习的同事，在生活中是互相帮助的好朋友；  
-
 
 致谢
 ---  
