--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -104,7 +104,7 @@ PDF 版下载
 ---  
 --- 
 
-谢谢，下载地址[resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
+谢谢，下载地址：[resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
 
 
 PS: 所有联系方式  
