start new resume

--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -11,7 +11,8 @@ description: My resume
 ---  
 ---
 - 手机：18202171279  
-- Email：litaotao#vip.163.com  
+- 微信：charles_be_good   
+- 邮箱：litaotao#vip.163.com  
 
 个人信息
 ---  
@@ -22,7 +23,7 @@ description: My resume
 - 技术博客：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
-- 期望职位：后端开发工程师
+- 目前职位：后端开发工程师
 
 工作经历
 ---  
@@ -41,7 +42,7 @@ description: My resume
 
 - 操作系统：Linux/Mac/Windows
 - 编程语言：Python/Erlang/Scala/C/C++/JS/HTML/CSS
-- 框架和库：Flask/Restful/OTP/Pymongo/Flask  
+- 框架和库：Flask/Restful/OTP/Pymongo  
 - 数据系统：Mongo/MySQL/Redis
 - 项目工具：Nginx/Visio/Gliffy
 - 技术研究：Spark/Machine Learning/Recommend System 
@@ -105,11 +106,3 @@ PDF 版下载
 --- 
 
 谢谢，下载地址：[resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
-
-
-PS: 所有联系方式  
----  
---- 
-邮件： litaotao#vip.163.com   
-微信： charles_be_good   
-电话： 哈哈，麻烦你邮件问我咯~~~  
