--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -10,8 +10,7 @@ description: My resume
 联系方式
 ---  
 ---
-- 手机：18202171279  
-- 微信：charles_be_good   
+- 手机/微信：18202171279  
 - 邮箱：litaotao#vip.163.com  
 
 个人信息
@@ -21,8 +20,8 @@ description: My resume
 - 本科/北京邮电大学/自动化系 
 - 工作年限：<1年
 - 技术博客：[http://litaotao.github.io](http://litaotao.github.io)
-- Github: [http://github.com/litaotao](http://github.com/litaotao)
-- Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
+- Github：[http://github.com/litaotao](http://github.com/litaotao)
+- Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：后端开发工程师
 
 工作经历
@@ -40,28 +39,13 @@ description: My resume
 ---  
 ---
 
-- 操作系统：Linux/Mac/Windows
-- 编程语言：Python/Erlang/Scala/C/C++/JS/HTML/CSS
-- 框架和库：Flask/Restful/OTP/Pymongo  
-- 数据系统：Mongo/MySQL/Redis
-- 项目工具：Nginx/Visio/Gliffy
-- 技术研究：Spark/Machine Learning/Recommend System 
-- 项目管理：Svn/Git/Markdown/JIRA/Jenkins/Confluence
-
-开源项目
----  
----
-
-### [Magnet](http://github.com/litaotao/Magnet)
-> * *Magnet : There are endless magnet lines in the magnet field, each of them has different direction and force, invisible but sensible, just like something that connect everyone in this world* 
-> * *Relation : Relation is something that around everyone in their whole life, it's so important but we cannot manage our relation effectively nowadays,not merely because it's unmeasurable and untouchable, but we still didn't find a simple but effective tool to help us.*
-> * *What mentioned above is the reasons why I create this project, it aims to help people:*
-> * *Maintain your past : That's help us to keep in touch with people we ever know but almost out of your memory*
-> * *Strengthen your present : That's help us to strengthen our relationship with people whose name you can come up in mind now*
-> * *Discover your future : That's the magic of this project, it help us to find or discover people around you who share the same insterests, hobbies, skills or anything else.*
-
-### [git-statistic](http://github.com/litaotao/git-statistic) 
-- 准备用git开放API来做一些技术、趋势统计分析相关的工作，正在开展中。
+- 操作系统：Linux，Mac，Windows
+- 编程语言：Python，Erlang，C，C++，JS，HTML，CSS
+- 框架和库：Flask，Restful，OTP，Celery
+- 数据系统：Mongo，MySQL，Redis
+- 项目工具：Nginx，Visio，Gliffy
+- 技术研究：Spark，Machine Learning，Recommend System 
+- 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 技术分享  
 ---  
@@ -72,13 +56,9 @@ description: My resume
 ---  
 ---
 
-- 读书
-- 航模  
-- 车模
-- 乒乓
-- 书法
-- 跑步
-- 技术研究 
+- 读书，技术研究
+- 航模，车模
+- 乒乓，跑步
 
 曾获荣誉
 ---  
