--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -74,7 +74,8 @@ Honour
 Statement
 ---
 ---    
-我爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
+Loving computer science, both the fundamental and cutting-edge related technologies;
+Easy-going, I beleive that 
 我乐助助人，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
 我热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
 我希望能在一个充满活力，文化开放的环境里工作，成长；   
