--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -31,11 +31,11 @@ Experience
 
 ### DataYes ( Apr.2014 ~  )
 
-#### 交易策略分享社区   
-我在此项目中一人负责社区后端开发。社区主要提供交易策略的分享和交流的平台，目标是做到策略投资界的github。项目的难点是策略关系的处理和缓存系统的设计。此外，采用开源模块实现了后台管理系统，管理员可以实时看到社区中用户数据和策略的相关元数据。此项目还在进行中，有诸多地方需要持续实践和改善。
+#### Strategy Share and Communicate Platform  
+I am the server developer of the community, aimming at providing a platform for quants to share strategies and communicate with each other. The keys of this platform are the management of users' relation, cache system and recommendation system. I choose MongoDB and Redis for the storage and cache, and use Python, Flask, Celery as the main technology stack. Futhermore, I design and implement a dynamic cache system based on the heat pages. It's a new paltform, which need much more improving, we still work on it.
 
 
-#### 通联信用评级
+#### DataYes Credit Rating System
 我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
 
 
