--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -46,7 +46,7 @@ description: My resume
 - 编程语言：Python，Erlang，C，C++，JS，HTML，CSS
 - 框架和库：Flask，Restful，OTP，Celery
 - 数据系统：Mongo，MySQL，Redis
-- 项目工具：Nginx，Visio，Gliffy
+- 项目工具：Nginx，Visio，Gliffy，phabricator
 - 技术研究：Spark，Machine Learning，Recommend System 
 - 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
