publish english resume

--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -1,11 +1,10 @@
 ---
 category: web
-published: false
+published: true
 layout: post
 title: My Resume English
 description: My resume
 ---
-
 
 Contact
 ---  
@@ -17,8 +16,8 @@ Contact
 Profile
 ---  
 ---
-- Taotao.Li,Male,1991 
-- Bachelor,Beijing University of Posts and Telecommunications,Automation 
+- Taotao.Li, Male, 1991 
+- Bachelor, Beijing University of Posts and Telecommunications, Automation 
 - Years of Working：<1 year
 - Blog：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
@@ -31,13 +30,11 @@ Experience
 
 ### DataYes ( Apr.2014 ~  )
 
-#### Strategy Share and Communicate Platform  
+- #### ***Strategy Share and Communicate Platform***
 I am the server developer of the community, aimming at providing a platform for quants to share strategies and communicate with each other. The keys of this platform are the management of users' relation, cache system and recommendation system. I choose MongoDB and Redis for the storage and cache, and use Python, Flask, Celery as the main technology stack. Futhermore, I design and implement a dynamic cache system based on the heat pages. It's a new paltform, which need much more improving, we still work on it.
 
-
-#### DataYes Credit Rating System
-我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
-
+- #### ***DataYes Credit Rating System***
+I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
 
 Skill
 ---  
@@ -59,39 +56,36 @@ Share
 Hobby
 ---  
 ---
-
-- Reading & Thinking, Technology Research
 - Model Plane, Model Car
-- Ping Pong, Running
-
+- Reading & Thinking, Technology Research
+- Ping Pong, Running, billiards
 
 Honour
 ---  
 ---  
-- [DataYes] Best new staff of Q2, 2014;
+- [DataYes] Best new staff of Q2, 2014 [5 people earned, about 220 people in total];
 
 
 Statement
 ---
 ---    
-Loving computer science, both the fundamental and cutting-edge related technologies;
-Easy-going, I beleive that 
-我乐助助人，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
-我热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
-我希望能在一个充满活力，文化开放的环境里工作，成长；   
-我希望能和最优秀的人才共事，希望大家在工作中是互相学习的同事，在生活中是互相帮助的好朋友；  
+- Loving computer science, both the fundamental and cutting-edge related technologies.
+- Easy-going, I beleive that communication, teamwork and unity from inside out is the key to success.
+- Full of passion, most of my spare time are devoted to reading, learning, sports and models. 
+- Hope to work in a energetic, open atomsphere.
+- Hope to cooperate with excellent people, good colleagues during work, and good friends in life.
 
 
 Thanks
 ---  
 --- 
 
-Thank you very much for 
+Thank you very much for reading my profile, appreciating for your feedback.
 
 
 PDF
 ---  
 --- 
 
-Thanks, to download as pdf, please click [resume-litaotao-SE](http://litaotao.github.io/files/resume-litaotao-SE.pdf)
+Thanks, to download as pdf, please click [resume-litaotao-SE](../files/resume-litaotao-SE.pdf)
 
