--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -87,5 +87,6 @@ PDF
 ---  
 --- 
 
-Thanks, to download as pdf, please click [resume-litaotao-SE](../files/resume-litaotao-SE.pdf)
+Thanks, to download as pdf, please click [resume-litaotao-SE](../files/litaotao-developer-en.pdf)     
+For Chinese version resume：[litaotao-developer-cn](../resume)
 
