--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -88,5 +88,5 @@ PDF 版下载
 ---  
 --- 
 
-谢谢，下载地址：[resume-litaotao-SE](../files/resume-litaotao-SE.pdf)
-
+谢谢，下载地址：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
+英文简历：[litaotao-developer-en](../resume-en)
