update resume, add IPython skill

--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -41,7 +41,7 @@ Skill
 ---
 
 - OS：Linux，Mac，Windows
-- Program：Python，Erlang，C，C++，JS，HTML，CSS
+- Program：Python/IPython，Erlang，C，C++，JS，HTML，CSS
 - Framework：Flask，Restful，OTP，Celery
 - Database：Mongo，MySQL，Redis
 - Tool：Nginx，Visio，Gliffy
