--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -44,7 +44,7 @@ Skill
 - Program：Python/IPython，Erlang，C，C++，JS，HTML，CSS
 - Framework：Flask，Restful，OTP，Celery
 - Database：Mongo，MySQL，Redis
-- Tool：Nginx，Visio，Gliffy
+- Tool：Nginx，Visio，Gliffy，Phabricator
 - Direction：Spark，Machine Learning，Recommend System 
 - Management：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
