--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -43,7 +43,7 @@ description: My resume
 ---  
 ---
 - 操作系统：Linux，Mac，Windows
-- 编程语言：Python/IPython，Erlang，C，C++，JS，HTML，CSS
+- 编程语言：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
 - 框架和库：Flask，Restful，OTP，Celery
 - 数据系统：Mongo，MySQL，Redis
 - 项目工具：Nginx，Visio，Gliffy，Phabricator
