--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -6,11 +6,6 @@ title: My Resume
 description: My resume
 ---
 
- 
-
-
-
-
 联系方式
 ---  
 ---
@@ -47,7 +42,7 @@ description: My resume
 - 框架和库：Flask，Restful，OTP，Celery
 - 数据系统：Mongo，MySQL，Redis
 - 项目工具：Nginx，Visio，Gliffy，Phabricator
-- 技术研究：Spark，Machine Learning，Recommend System 
+- 技术研究：Spark，Machine Learning，Recommend System
 - 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 技术分享  
@@ -71,11 +66,11 @@ description: My resume
 自我描述
 ---
 ---    
-- 我爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
-- 我乐助助人，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
-- 我热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
-- 我希望能在一个充满活力，文化开放的环境里工作，成长；   
-- 我希望和优秀的人才共事，大家在工作中是互相学习的同事，在生活中是互相帮助的好朋友；  
+- 爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
+- 乐助助人，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
+- 热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
+- 希望能在一个充满活力，文化开放的环境里工作，成长；   
+- 向往和优秀的人共事，大家在工作中是互相学习的同事，在生活中是互相帮助的好朋友；  
 
 致谢
 ---  
