--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -6,13 +6,6 @@ title: My Resume English
 description: My resume
 ---
 
-Contact
----  
----
-- Phone, WeChat：18202171279  
-- Email：litaotao#vip.163.com  
-
-
 Profile
 ---  
 ---
@@ -23,6 +16,8 @@ Profile
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - Position：Backend Software Engineer
+- Phone, WeChat：18202171279  
+- Email：litaotao#vip.163.com  
 
 Experience
 ---  
@@ -30,11 +25,21 @@ Experience
 
 ### DataYes ( Apr.2014 ~  )
 
-- #### ***Strategy Share and Communicate Platform***
-I am the server developer of the community, aimming at providing a platform for quants to share strategies and communicate with each other. The keys of this platform are the management of users' relation, cache system and recommendation system. I choose MongoDB and Redis for the storage and cache, and use Python, Flask, Celery as the main technology stack. Futhermore, I design and implement a dynamic cache system based on the heat pages. It's a new paltform, which need much more improving, we still work on it.
+- ### ***Strategy Commuity***
+Community is the platform attached with the online strategy research prodcut, aiming at offering a platform where quants can share strategies and communicate. It’s hold on q.datayes.com. I am the server developer of the community.
+
+***keys*** : 
+
+- Recommend System:  basic collaborative filtering;
+- Optimization:  design backend and frontend request strategy;
+- Asynchronous:  gevent, grequests;
+- Search:  inverted index, auto-completion;   
+- Relation:  NoSQL scheme design, index design;
+- Caching:  Redis; [ Put Mongo and Redis in different server ]
+
 
 - #### ***DataYes Credit Rating System***
-I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
+Rating is a product serving for domestic small comanies, it’s hold on gw.wmcloud.com/rating . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
 
 Skill
 ---  
@@ -51,14 +56,23 @@ Skill
 Share
 ---  
 ---
-- [Spark Fire](../files/spark-fire.ppt)
+- [Spark Fire](../files/spark-fire.ppt) ：A simple introduction of Spark and demo.
+
+Projects
+---
+---
+[Magnet](https://github.com/litaotao/magnet)     
+A new-style, simple relationship management tool, aiming to help people maintain their past, reinforce present and discovery the future.
+
+[cmdtranslator](https://github.com/litaotao/cmdtranslator)    
+It’s a funny tool specifically designed for programmers, it wastes so much time when I open a translator App or website for translating a word, and these Apps are filled with endless ads. So to save time, I write this small tool and I discard translator Apps and website since I made this.
 
 Hobby
 ---  
 ---
 - Model Plane, Model Car
+- Ping Pong, Running, Billiards
 - Reading & Thinking, Technology Research
-- Ping Pong, Running, billiards
 
 Honour
 ---  
@@ -70,10 +84,10 @@ Statement
 ---
 ---    
 - Loving computer science, both the fundamental and cutting-edge related technologies.
-- Easy-going, I beleive that communication, teamwork and unity from inside out is the key to success.
-- Full of passion, most of my spare time are devoted to reading, learning, sports and models. 
-- Hope to work in a energetic, open atomsphere.
-- Hope to cooperate with excellent people, good colleagues during work, and good friends in life.
+- Easy-going, I beleive that communication, teamwork and unity from inside out is the key to success.   
+- Full of passion, most of my spare time are devoted to reading, learning, sports and models.
+- Wide interest, besides technology, I also learn a lot of product design, popularization and marketing.
+
 
 
 Thanks
