--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -6,22 +6,18 @@ title: My Resume
 description: My resume
 ---
 
-联系方式
----  
----
-- 手机，微信：18202171279  
-- 邮箱：litaotao#vip.163.com  
-
 个人信息
 ---  
 ---
 - 李涛涛，男，1991 
 - 本科，北京邮电大学，自动化系 
-- 工作年限：<1年
+- 工作年限：< 1 年
 - 技术博客：[http://litaotao.github.io](http://litaotao.github.io)
 - Github：[http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：后端开发工程师
+- 手机，微信：18202171279  
+- 邮箱：litaotao#vip.163.com  
 
 工作经历
 ---  
@@ -29,10 +25,19 @@ description: My resume
 ### 通联数据股份公司 ( 2014年4月 ~  )
 
 - #### 交易策略分享社区   
-我在此项目中一人负责社区后端开发。社区主要提供交易策略的分享和交流的平台，目标是做到策略投资界的github。项目的难点是策略，用户之间关系的处理，缓存系统的设计和推荐系统的设计。存储上采用NoSQL数据库，后台采用Python，Flask作为主要方案。关系处理和通知上采用Celery管理任务；在对API测试的基础上，有依据地设计缓存策略，缓存系统采用Redis，并基于页面热度设计了动态缓存方式；推荐系统尚在实现当中。该项目尚未成熟，有很多地方需要持续改进。
+社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。产品地址是 [q.datayes.com](q.datayes.com)。我在此项目中一人负责社区后端开发，能高效地与产品经理和前端开发讨论产品方案。不仅提前、按时完成功能开发和测试，还通过各种方法保证产品后期可扩展性，高可用性。
+
+难点：   
+
+- 推荐系统：协同过滤；
+- 速度优化：前后端请求拆分；
+- 异步任务；gevent；grequests；
+- 即时搜索；倒排索引，实时补全；   
+- 策略，用户关系；NoSQL scheme 设计；索引的设计；
+- 缓存系统；Redis缓存图片数据；【 Redis与Mongo需要在不同的服务器上 】
 
 - #### 通联信用评级
-我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
+信评是一个针对国内中小微企业的信用评分产品，产品地址 [gw.wmcloud.com/rating](gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
 
 技能清单
 ---  
@@ -48,15 +53,14 @@ description: My resume
 技术分享  
 ---  
 ---
-- 介绍Spark历史和简单Demo：[Spark Fire](../files/spark-fire.ppt)
+- [Spark Fire](../files/spark-fire.ppt)：介绍Spark历史和简单Demo
 
 业余爱好
 ---  
 ---
 - 航模，车模
-- 读书思考，技术研究
 - 乒乓，跑步，台球
-
+- 读书思考，技术研究
 
 曾获荣誉
 ---  
@@ -67,10 +71,9 @@ description: My resume
 ---
 ---    
 - 爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
-- 乐助助人，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
-- 热爱生活，我大部分业余时间都献给了看书，运动，车模，航模；   
-- 希望能在一个充满活力，文化开放的环境里工作，成长；   
-- 向往和优秀的人共事，大家在工作中是互相学习的同事，在生活中是互相帮助的好朋友；  
+- 热情、团结，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
+- 热爱生活，我大部分业余时间都献给了看书，运动，技术学习，车模，航模；  
+- 兴趣广泛，在研究技术之余，学习到许多产品设计，推广，营销方面的知识； 
 
 致谢
 ---  
