--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -26,7 +26,7 @@ Experience
 ### DataYes ( Apr.2014 ~  )
 
 - ### ***Strategy Commuity***
-Community is the platform attached with the online strategy research prodcut, aiming at offering a platform where quants can share strategies and communicate. It’s hold on q.datayes.com. I am the server developer of the community.
+Community is the platform attached with the online strategy research prodcut, aiming at offering a platform where quants can share strategies and communicate. It’s hold on [q.datayes.com](http://q.datayes.com). I am the server developer of the community.
 
 ***keys*** : 
 
@@ -39,7 +39,7 @@ Community is the platform attached with the online strategy research prodcut, ai
 
 
 - #### ***DataYes Credit Rating System***
-Rating is a product serving for domestic small comanies, it’s hold on gw.wmcloud.com/rating . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
+Rating is a product serving for domestic small comanies, it’s hold on [gw.wmcloud.com/rating](http://gw.wmcloud.com/rating) . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
 
 Skill
 ---  
