add qrcode for each blog at the end

--- a/_posts/tools/2014-01-21-others.md
+++ b/_posts/tools/2014-01-21-others.md
@@ -20,3 +20,8 @@ LANG=”en_US.UTF-8″
 选项->会话选项->外观->字符编码->uft-8
 
 3，退出，再重新登录。发现utf8的文件都能正确读了，utf8的文件名也能正确显示了
+
+
+## 扫一扫     
+
+![2014-01-21-others.md](../../images/share/2014-01-21-others.md.jpg)
