--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -104,3 +104,8 @@ PDF
 Thanks, to download as pdf, please click [resume-litaotao-SE](../files/litaotao-developer-en.pdf)     
 For Chinese version resume：[litaotao-developer-cn](../resume)
 
+
+
+## 扫一扫     
+
+![2014-11-08-resume-en.md](../../images/share/2014-11-08-resume-en.md.jpg)
