--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -88,3 +88,8 @@ PDF 版下载
 
 谢谢，下载地址：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
 英文简历：[litaotao-developer-en](../resume-en)
+
+
+## 扫一扫     
+
+![2014-11-08-resume.md](../../images/share/2014-11-08-resume.md.jpg)
