--- a/_posts/tools/2014-01-21-others.md
+++ b/_posts/tools/2014-01-21-others.md
@@ -22,6 +22,26 @@ LANG=”en_US.UTF-8″
 3，退出，再重新登录。发现utf8的文件都能正确读了，utf8的文件名也能正确显示了
 
 
+## 2. Mac OS X - EnvironmentError: mysql_config not found
+
+ENV: OSX
+Event: sudo pip install MySQL-python
+Error: ImproperlyConfigured("Error loading MySQLdb module: %s" % e)
+Fix: [stackoverflow](http://stackoverflow.com/questions/25459386/mac-os-x-environmenterror-mysql-config-not-found)
+
+## 3. connection reset by peer
+
+ENV: OSX
+Event: check a url in Chrome
+Error: connection reset by peer
+Fix: add https:// as prefix in the url
+
+
+
+
+
+
+
 ## 扫一扫     
 
 ![2014-01-21-others.md](../../images/share/2014-01-21-others.md.jpg)
