update sql blog

--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -26,16 +26,9 @@ Experience
 ### DataYes ( Apr.2014 ~  )
 
 - ### ***Strategy Commuity***
-Community is the platform attached with the online strategy research prodcut, aiming at offering a platform where quants can share strategies and communicate. It’s hold on [q.datayes.com](http://q.datayes.com). I am the server developer of the community.
+Community is the room attached with the online strategy research platform, aiming at offering a platform where quants can share strategies and communicate. I am the server developer of the community.
 
-***keys*** : 
-
-- Recommend System:  basic collaborative filtering;
-- Optimization:  design backend and frontend request strategy;
-- Asynchronous:  gevent, grequests;
-- Search:  inverted index, auto-completion;   
-- Relation:  NoSQL scheme design, index design;
-- Caching:  Redis; [ Put Mongo and Redis in different server ]
+Product link: [Uqer.io](https://uqer.io/community/)
 
 
 - #### ***DataYes Credit Rating System***
@@ -48,8 +41,8 @@ Skill
 - OS：Linux，Mac，Windows
 - Program：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
 - Framework：Flask，Restful，OTP，Celery
-- Database：Mongo，MySQL，Redis
-- Tool：Nginx，Visio，Gliffy，Phabricator
+- Database：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
+- Tool：Nginx，Vagrant, Visio，Gliffy，Phabricator
 - Direction：Spark，Machine Learning，Recommend System 
 - Management：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
