--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -21,22 +21,17 @@ description: My resume
 工作经历
 ---  
 ---
-### 通联数据股份公司 ( 2014年4月 ~  2015年6月)
+### Glow ( 2015年6月 ~ )
 
-- #### 交易策略分享社区   
-社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。产品地址是 [q.datayes.com](http://q.datayes.com)。我在此项目中一人负责社区后端开发，能高效地与产品经理和前端开发讨论产品方案。不仅提前、按时完成功能开发和测试，还通过各种方法保证产品后期可扩展性，高可用性。
 
-难点：   
+### 通联数据股份公司 ( 2014年4月 ~ 2015年6月)
 
-- 推荐系统：协同过滤；
-- 速度优化：前后端请求拆分；
-- 异步任务；gevent；grequests；
-- 即时搜索；倒排索引，实时补全；   
-- 策略，用户关系；NoSQL scheme 设计；索引的设计；
-- 缓存系统；Redis缓存图片数据；【 Redis与Mongo需要在不同的服务器上 】
+- #### 优矿社区   
+社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。产品地址是 [Uqer.io](http://www.uqer.io)。我在此项目中一人负责社区后端开发，能高效地与产品经理和前端开发讨论产品方案。不仅提前、按时完成功能开发和测试，还通过各种方法保证产品后期可扩展性，高可用性。
+
 
 - #### 通联信用评级
-信评是一个针对国内中小微企业的信用评分产品，产品地址 [gw.wmcloud.com/rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
+信评是一个针对国内中小微企业的信用评分产品，产品地址 [rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
 
 
 技能清单
@@ -45,8 +40,8 @@ description: My resume
 - 操作系统：Linux，Mac，Windows
 - 编程语言：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
 - 框架和库：Flask，Restful，OTP，Celery
-- 数据系统：Mongo，MySQL，Redis
-- 项目工具：Nginx，Visio，Gliffy，Phabricator
+- 数据系统：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
+- 项目工具：Nginx，Vagrant, Visio，Gliffy，Phabricator
 - 技术研究：Spark，Machine Learning，Recommend System
 - 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
