--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -23,24 +23,29 @@ Experience
 ---  
 ---
 
-### DataYes ( Apr.2014 ~  )
+### Glow ( Jun.2015 ~ )
+
+- #### metrics report   
+Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report. Using looker to building metrics dashboard.
+
+
+### DataYes ( Apr.2014 ~ Jun.2015 )
 
 - ### ***Strategy Commuity***
-Community is the room attached with the online strategy research platform, aiming at offering a platform where quants can share strategies and communicate. I am the server developer of the community.
-
+Community is the room attached with the online strategy research platform, aiming at offering a platform where quants can share strategies and communicate. I am the server developer of the community.    
 Product link: [Uqer.io](https://uqer.io/community/)
 
 
 - #### ***DataYes Credit Rating System***
-Rating is a product serving for domestic small comanies, it’s hold on [gw.wmcloud.com/rating](http://gw.wmcloud.com/rating) . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.
+Rating is a product serving for domestic small comanies . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.    
 
 Skill
 ---  
 ---
 
 - OS：Linux，Mac，Windows
-- Program：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
-- Framework：Flask，Restful，OTP，Celery
+- Program：Python/IPython，Shell，Erlang，C，C++，JS，HTML，CSS
+- Framework：Flask，Restful，Celery
 - Database：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - Tool：Nginx，Vagrant, Visio，Gliffy，Phabricator
 - Direction：Spark，Machine Learning，Recommend System 
