--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -11,13 +11,12 @@ Profile
 ---
 - Taotao.Li, Male, 1991 
 - Bachelor, Beijing University of Posts and Telecommunications, Automation 
-- Years of Working：<1 year
 - Blog：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - Position：Backend Software Engineer
 - Phone, WeChat：18202171279  
-- Email：litaotao#vip.163.com  
+- Email：taotao.engineer#gmail.com 
 
 Experience
 ---  
