--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -15,7 +15,7 @@ description: My resume
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：后台开发工程师
 - 手机，微信：18202171279  
-- 邮箱：litaotao#vip.163.com  
+- 邮箱：taotao.engineer#gmail.com  
 - 方向：后台开发，数据开发，数据分析
 
 工作经历
