--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -15,17 +15,14 @@ description: My resume
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：后台开发工程师
 - 手机，微信：18202171279  
-- 邮箱：taotao.engineer#gmail.com  
+- 邮箱：litaotao#vip.163.com  
 - 方向：后台开发，数据开发，数据分析
 
 工作经历
 ---  
----       
-
+---
 ### Glow ( 2015年6月 ~ )
-
-- #### metrics report   
-开发维护应用 metrics 的数据ETL，计算，存储和报告，使用 looker 建立应用 metrics dashboard。
+负责数据相关的
 
 ### 通联数据股份公司 ( 2014年4月 ~ 2015年6月)
 
@@ -34,15 +31,15 @@ description: My resume
 
 
 - #### 通联信用评级
-信评是一个针对国内中小微企业的信用评分产品。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
+信评是一个针对国内中小微企业的信用评分产品，产品地址 [rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
 
 
 技能清单
 ---  
 ---
 - 操作系统：Linux，Mac，Windows
-- 编程语言：Python/IPython，Shell，Erlang，C，C++，JS，HTML，CSS
-- 框架和库：Flask，Restful，Celery
+- 编程语言：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
+- 框架和库：Flask，Restful，OTP，Celery
 - 数据系统：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - 项目工具：Nginx，Vagrant, Visio，Gliffy，Phabricator
 - 技术研究：Spark，Machine Learning，Recommend System
