update reusme update font family

--- a/_posts/web/2014-11-08-resume.md
+++ b/_posts/web/2014-11-08-resume.md
@@ -9,20 +9,20 @@ description: My resume
 个人信息
 ---  
 ---
-- 李涛涛，男，1991，本科，北京邮电大学，自动化系 
+- 李涛涛，男，1991，本科，北京邮电大学，自动化系
 - 技术博客：[http://litaotao.github.io](http://litaotao.github.io)
 - Github：[http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：后台开发工程师
 - 手机，微信：18202171279  
-- 邮箱：litaotao#vip.163.com  
-- 方向：后台开发，数据开发，数据分析
+- 邮箱：taotao.engineer@gmail.com  
 
 工作经历
 ---  
 ---
 ### Glow ( 2015年6月 ~ )
-负责数据相关的
+数据 ETL，App Metrics 计算，分析，报告。      
+APP 服务端开发。
 
 ### 通联数据股份公司 ( 2014年4月 ~ 2015年6月 )
 
@@ -31,7 +31,7 @@ description: My resume
 
 
 - #### 通联信用评级
-信评是一个针对国内中小微企业的信用评分产品，产品地址 [rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】 
+信评是一个针对国内中小微企业的信用评分产品，产品地址 [rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
 
 
 技能清单
@@ -42,13 +42,20 @@ description: My resume
 - 框架和库：Flask，Restful，OTP，Celery
 - 数据系统：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - 项目工具：Nginx，Vagrant, Visio，Gliffy，Phabricator
-- 技术研究：Spark，Machine Learning，Recommend System
+- 技术研究：Quantitative investing, Spark，Machine Learning，Recommendation
 - 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 技术分享  
 ---  
 ---
 - [Spark Fire](../files/spark-fire.ppt)：介绍Spark历史和简单Demo
+
+开源项目
+---  
+---
+[IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard)    
+一个轻量的 web server，用于对 csv 结构的数据进行不同类型的展示，分享，协作。最开始是为了弥补 ipython 在 dashboard 方面的不足。这个工具对大多数数据科学家，数据分析师比较有用。
+
 
 业余爱好
 ---  
@@ -68,18 +75,18 @@ description: My resume
 - 爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
 - 热情、团结，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
 - 热爱生活，我大部分业余时间都献给了看书，运动，技术学习，车模，航模；  
-- 兴趣广泛，在研究技术之余，学习到许多产品设计，推广，营销方面的知识； 
+- 兴趣广泛，在研究技术之余，学习到许多产品设计，推广，营销方面的知识；
 
 致谢
 ---  
---- 
+---
 
 感谢您花时间阅读我的简历，期待能有机会与您共事。
 
 
 PDF 版下载
 ---  
---- 
+---
 
 谢谢，下载地址：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
 英文简历：[litaotao-developer-en](../resume-en)
