--- a/_posts/web/2014-11-08-resume-en.md
+++ b/_posts/web/2014-11-08-resume-en.md
@@ -9,14 +9,14 @@ description: My resume
 Profile
 ---  
 ---
-- Taotao.Li, Male, 1991 
-- Bachelor, Beijing University of Posts and Telecommunications, Automation 
+- Taotao.Li, Male, 1991
+- Bachelor, Beijing University of Posts and Telecommunications, Automation
 - Blog：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - Position：Backend Software Engineer
 - Phone, WeChat：18202171279  
-- Email：taotao.engineer#gmail.com 
+- Email：taotao.engineer#gmail.com
 
 Experience
 ---  
@@ -24,7 +24,6 @@ Experience
 
 ### Glow ( Jun.2015 ~ )
 
-- #### metrics report   
 Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report. Using looker to building metrics dashboard.
 
 
@@ -47,7 +46,7 @@ Skill
 - Framework：Flask，Restful，Celery
 - Database：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - Tool：Nginx，Vagrant, Visio，Gliffy，Phabricator
-- Direction：Spark，Machine Learning，Recommend System 
+- Direction：Quantitative investing, Spark，Machine Learning，Recommendation
 - Management：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 Share
@@ -56,13 +55,11 @@ Share
 - [Spark Fire](../files/spark-fire.ppt) ：A simple introduction of Spark and demo.
 
 Projects
+---  
 ---
----
-[Magnet](https://github.com/litaotao/magnet)     
-A new-style, simple relationship management tool, aiming to help people maintain their past, reinforce present and discovery the future.
+[IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard)   
 
-[cmdtranslator](https://github.com/litaotao/cmdtranslator)    
-It’s a funny tool specifically designed for programmers, it wastes so much time when I open a translator App or website for translating a word, and these Apps are filled with endless ads. So to save time, I write this small tool and I discard translator Apps and website since I made this.
+A stand alone, light-weight web server for building, sharing graphs created in ipython. Build for data science, data analysis guys. Building an interactive visualization, collaborated dashboard, and real-time streaming graph.
 
 Hobby
 ---  
@@ -89,14 +86,14 @@ Statement
 
 Thanks
 ---  
---- 
+---
 
 Thank you very much for reading my profile, appreciating for your feedback.
 
 
 PDF
 ---  
---- 
+---
 
 Thanks, to download as pdf, please click [resume-litaotao-SE](../files/litaotao-developer-en.pdf)     
 For Chinese version resume：[litaotao-developer-cn](../resume)
