blog review this month

--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -1,5 +1,5 @@
 ---
-category: web
+category: work
 published: true
 layout: post
 title: My Resume English
@@ -14,7 +14,7 @@ Profile
 - Blog：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
-- Position：Backend Software Engineer
+- Position：Quant Engineer
 - Phone, WeChat：18202171279  
 - Email：taotao.engineer#gmail.com
 
@@ -24,7 +24,8 @@ Experience
 
 ### DataYes ( Nov.2015 ~ )
 
-Quant Developer @ [UQER](uqer.io)
+- #### ***UQER***
+Futures backtesting framework, including market data ETL, strategy research, backtesting and simulation in real-time. Product link is : [uqer.io](uqer.io)
 
 ### Glow ( Jun.2015 ~ Nov.2015)
 
