--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -1,5 +1,5 @@
 ---
-category: web
+category: work
 published: true
 layout: post
 title: My Resume
@@ -10,10 +10,10 @@ description: My resume
 ---  
 ---
 - 李涛涛，男，1991，本科，北京邮电大学，自动化系
-- 技术博客：[http://litaotao.github.io](http://litaotao.github.io)
+- 博客：[http://litaotao.github.io](http://litaotao.github.io)
 - Github：[http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
-- 当前职位：后台开发工程师
+- 当前职位：量化工程师
 - 手机，微信：18202171279  
 - 邮箱：taotao.engineer@gmail.com  
 
@@ -23,7 +23,8 @@ description: My resume
 
 ### 通联数据股份公司 ( 2015年12月 ~  )
 
-量化工程师－ [优矿项目组](uqer.io)
+- #### [优矿](uqer.io)
+开发期货回测框架，包括数据 ETL，策略研究，回测以及模拟。
 
 ### Glow ( 2015年6月 ~ 2015年11月 )
 数据 ETL，App Metrics 计算，分析，报告。      
