--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -15,29 +15,31 @@ description: My resume
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：量化工程师
 - 手机，微信：18202171279  
-- 邮箱：taotao.engineer@gmail.com  
+- 邮箱：taotao.engineer#gmail.com  
 
 工作经历
 ---  
 ---
 
-### 通联数据股份公司 ( 2015年12月 ~  )
+### [通联数据股份公司](http://www.datayes.com/#/home) ( 2015年12月 ~  )
 
 - #### [优矿](uqer.io)
-开发期货回测框架，包括数据 ETL，策略研究，回测以及模拟。
+设计，开发期货回测框架，包括行情数据 ETL，策略研究，策略回测以及模拟交易；  
+量化策略研究及开发。
 
-### Glow ( 2015年6月 ~ 2015年11月 )
-数据 ETL，App Metrics 计算，分析，报告。      
+### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
+负责应用后台数据 ETL，App Metrics 计算，分析，报告；    
+协助开发 A/B test 服务及结果分析报告；        
 APP 服务端开发。
 
-### 通联数据股份公司 ( 2014年4月 ~ 2015年6月 )
+### [通联数据股份公司](http://www.datayes.com/#/home) ( 2014年4月 ~ 2015年6月 )
 
-- #### 优矿社区   
-社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。产品地址是 [Uqer.io](http://www.uqer.io)。我在此项目中一人负责社区后端开发，能高效地与产品经理和前端开发讨论产品方案。不仅提前、按时完成功能开发和测试，还通过各种方法保证产品后期可扩展性，高可用性。
+- #### [优矿社区](https://uqer.io/community/list)   
+社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。  
+独自负责社区后端开发，与产品经理，前端开发共同讨论产品实现方案。提前、按时完成功能开发和测试，以 SOA 方式设计产品模块，尽力保证产品后期可扩展性，高可用性。
 
-
-- #### 通联信用评级
-信评是一个针对国内中小微企业的信用评分产品，产品地址 [rating](http://gw.wmcloud.com/rating) 。我在此项目中一人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
+- #### [通联信用评级](http://www.datayes.com/#/product?state=rating)
+信评是一个针对国内中小微企业的信用评分产品。个人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
 
 
 技能清单
@@ -54,7 +56,8 @@ APP 服务端开发。
 技术分享  
 ---  
 ---
-- [Spark Fire](../files/spark-fire.ppt)：介绍Spark历史和简单Demo
+- [Spark Fire](http://litaotao.github.io/files/spark-fire.ppt)
+- [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
 
 开源项目
 ---  
@@ -96,8 +99,3 @@ PDF 版下载
 
 谢谢，下载地址：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
 英文简历：[litaotao-developer-en](../resume-en)
-
-
-## 扫一扫     
-
-![2014-11-08-resume.md](../../images/share/2014-11-08-resume.md.jpg)
