--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -22,25 +22,27 @@ Experience
 ---  
 ---
 
-### DataYes ( Nov.2015 ~ )
+### [DataYes](http://www.datayes.com/#/home) ( 11.2015 ~ )
 
-- #### ***UQER***
-Futures backtesting framework, including market data ETL, strategy research, backtesting and simulation in real-time. Product link is : [uqer.io](uqer.io)
+- #### [UQER](uqer.io)
+Futures backtesting framework, including market data ETL, strategy research, backtesting and simulation in real-time;     
+Quantitative strategy research and building.
 
-### Glow ( Jun.2015 ~ Nov.2015)
+### [Glow](http://www.glowing.com/) ( 06.2015 ~ 11.2015 )
 
-Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report. Using looker to building metrics dashboard.
+Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report;   
+Assist building A/B test service and result reporting;   
+Using looker to building metrics dashboard.
 
 
-### DataYes ( Apr.2014 ~ Jun.2015 )
+### [DataYes](http://www.datayes.com/#/home) ( 04.2014 ~ 06.2015 )
 
-- ### ***Strategy Commuity***
+- ### [Strategy Commuity](https://uqer.io/community/list) 
 Community is the room attached with the online strategy research platform, aiming at offering a platform where quants can share strategies and communicate. I am the server developer of the community.    
-Product link: [Uqer.io](https://uqer.io/community/)
 
 
-- #### ***DataYes Credit Rating System***
-Rating is a product serving for domestic small comanies . I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.    
+- #### [DataYes Credit Rating System](http://www.datayes.com/#/product?state=rating)
+Rating is a product serving for domestic small comanies. I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.    
 
 Skill
 ---  
@@ -57,7 +59,8 @@ Skill
 Share
 ---  
 ---
-- [Spark Fire](../files/spark-fire.ppt) ：A simple introduction of Spark and demo.
+- [Spark Fire](../files/spark-fire.ppt) 
+- [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
 
 Projects
 ---  
@@ -102,9 +105,3 @@ PDF
 
 Thanks, to download as pdf, please click [resume-litaotao-SE](../files/litaotao-developer-en.pdf)     
 For Chinese version resume：[litaotao-developer-cn](../resume)
-
-
-
-## 扫一扫     
-
-![2014-11-08-resume-en.md](../../images/share/2014-11-08-resume-en.md.jpg)
