--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -61,6 +61,7 @@ Share
 ---
 - [Spark Fire](../files/spark-fire.ppt) 
 - [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
+- [Python for Finance, Quant Topic](http://litaotao.github.io/files/python-quant-uqer.pdf)
 
 Projects
 ---  
