--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -58,6 +58,7 @@ APP 服务端开发。
 ---
 - [Spark Fire](http://litaotao.github.io/files/spark-fire.ppt)
 - [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
+- [Python for Finance, Quant Topic](http://litaotao.github.io/files/python-quant-uqer.pdf)
 
 开源项目
 ---  
