add present mode

--- a/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
+++ b/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
@@ -176,7 +176,7 @@ spark 2.0 性能上会有较大的提升，根据官方文档，2.0 会引入新
 
 ## 14. 打开微信，扫一扫，点一点，棒棒的，^_^
 
-![wechat_pay_any.png](../images/wechat_pay_any.png)
+![wechat_pay_6-6.png](../images/wechat_pay_6-6.png)
 
 
 ## 参考文章
