--- a/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
+++ b/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
@@ -68,7 +68,7 @@ On the SQL side, we have significantly expanded the SQL capabilities of Spark, w
 2008年，ISO/IEC 9075:2008，SQL:2008    
 2011年，ISO/IEC 9075:2011，SQL:2011   
 
-- Spark 2.0 中，更新了新的 SQL 解析器，可以支持子查询了，特地重复一下，因为基本上所有复杂的 sql 语句都会用到子查询。
+- Spark 2.0 中，更新了新的 SQL 解析器，可以支持子查询了，特地重复一下，因为基本上所有复杂的 sql 语句都会用到子查询，官方有例子: [Subqueries in Apache Spark 2.0](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/2728434780191932/1483312212640900/6987336228780374/latest.html)
 
 
 ## 5. 特性 3 - 统一 DataFrames and Datasets API
@@ -197,6 +197,7 @@ spark 2.0 性能上会有较大的提升，根据官方文档，2.0 会引入新
 - [Demo 2. SparkSession - the new entry point](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/6122906529858466/2727501386611546/5382278320999420/latest.html)
 - [Dataset API](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/6122906529858466/431554386690871/4814681571895601/latest.html)
 - [Saving & loading Machine Learning (ML) models](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/6122906529858466/100429797847215/4814681571895601/latest.html)
+- [Subqueries in Apache Spark 2.0](https://databricks-prod-cloudfront.cloud.databricks.com/public/4027ec902e239c93eaaa8714f173bcfc/2728434780191932/1483312212640900/6987336228780374/latest.html)
 
 
 
