--- a/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
+++ b/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: 『 Spark 』12. Spark 2.0 | 10 个特性介绍
+title: 『 Spark 』12. Spark 2.0  | 10 个特性介绍
 description: Spark 2.0 简单总结一下，用更少的代码，以更大的效率，完成更多的工作。 
 ---  
 
@@ -214,4 +214,4 @@ spark 2.0 性能上会有较大的提升，根据官方文档，2.0 会引入新
 - [『 Spark 』9. 搭建 IPython + Notebook + Spark 开发环境](http://litaotao.github.io/ipython-notebook-spark?s=inner)
 - [『 Spark 』10. spark 应用程序性能优化｜12 个优化方法](http://litaotao.github.io/boost-spark-application-performance?s=inner)
 - [『 Spark 』11. spark 机器学习](http://litaotao.github.io/spark-mlib-machine-learning?s=inner)
-- [『 Spark 』12. Spark 2.0 | 10 个特性介绍](http://litaotao.github.io/spark-2.0-faster-easier-smarter?s=inner)
+- [『 Spark 』12. Spark 2.0 特性介绍](http://litaotao.github.io/spark-2.0-faster-easier-smarter?s=inner)
