--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -26,10 +26,13 @@ Experience
 
 - #### [UQER](uqer.io)
 Futures backtesting framework, including market data ETL, strategy research, backtesting and simulation in real-time;     
-Quantitative strategy research and building.
+Quantitative strategy research and building;
+Design, build and deploy finance data computing platform on Spark;
+
 
 ### [Glow](http://www.glowing.com/) ( 06.2015 ~ 11.2015 )
 
+- #### Data Engineer
 Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report;   
 Assist building A/B test service and result reporting;   
 Using looker to building metrics dashboard.
@@ -49,11 +52,11 @@ Skill
 ---
 
 - OS：Linux，Mac，Windows
-- Program：Python/IPython，Shell，Erlang，C，C++，JS，HTML，CSS
-- Framework：Flask，Restful，Celery
+- Program：Python/IPython，C，C++，Shell，Erlang，JS，HTML，CSS
+- Framework：Spark, Hadoop, Flask，Restful，OTP
 - Database：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - Tool：Nginx，Vagrant, Visio，Gliffy，Phabricator
-- Direction：Quantitative investing, Spark，Machine Learning，Recommendation
+- Direction：Quantitative investing, Machine Learning，Recommendation
 - Management：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 Share
@@ -63,34 +66,32 @@ Share
 - [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
 - [Python for Finance, Quant Topic](http://litaotao.github.io/files/python-quant-uqer.pdf)
 
+
 Projects
 ---  
 ---
-[IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard)   
+- [IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard) : A stand alone, light-weight web server for building, sharing graphs created in ipython. Build for data science, data analysis guys. Building an interactive visualization, collaborated dashboard, and real-time streaming graph.
+- [github-blog-template](https://github.com/litaotao/github-blog-template) : My github blog template。
+- [ipython-notebook-spark](https://github.com/litaotao/ipython-notebook-spark) : Materials and tutorial on building Spark developing platorm on IPython.
 
-A stand alone, light-weight web server for building, sharing graphs created in ipython. Build for data science, data analysis guys. Building an interactive visualization, collaborated dashboard, and real-time streaming graph.
 
 Hobby
 ---  
 ---
-- Model Plane, Model Car
-- Ping Pong, Running, Billiards
-- Reading & Thinking, Technology Research
+Model Plane, Model Car; Ping Pong, Running, Billiards; Reading & Thinking, Technology Research.
+
 
 Honour
 ---  
 ---  
-- [DataYes] Best new staff of Q2, 2014 [5 people earned, about 220 people in total];
+- [DataYes] Best New Staff of Q2, 2014 [5 people earned, about 220 people in total];
+- [DataYes] CEO Special Award of Q2, 2016 [2 people earned, about 260 people in total];
 
 
 Statement
 ---
 ---    
-- Loving computer science, both the fundamental and cutting-edge related technologies.
-- Easy-going, I beleive that communication, teamwork and unity from inside out is the key to success.   
-- Full of passion, most of my spare time are devoted to reading, learning, sports and models.
-- Wide interest, besides technology, I also learn a lot of product design, popularization and marketing.
-
+Loving computer science, keeping in touch with cutting-edge technologies; easy-going, do well in team work; with wide interests, reading, model plane and model car; looking forward to improve in every possible way, so sometimes I'll assist opeartion team and sales team.
 
 
 Thanks
@@ -104,5 +105,5 @@ PDF
 ---  
 ---
 
-Thanks, to download as pdf, please click [resume-litaotao-SE](../files/litaotao-developer-en.pdf)     
-For Chinese version resume：[litaotao-developer-cn](../resume)
+Thanks, to download as pdf, please click [litaotao-developer-cn](../files/litaotao-developer-en.pdf)     
+For Chinese version resume：[resume_cn](../resume)
