--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -23,34 +23,36 @@ description: My resume
 
 ### [通联数据股份公司](http://www.datayes.com/#/home) ( 2015年12月 ~  )
 
-- #### [优矿](uqer.io)
-设计，开发期货回测框架，包括行情数据 ETL，策略研究，策略回测以及模拟交易；  
-量化策略研究及开发。
+- #### [优矿 | 量化工程师](uqer.io)
+设计，开发期货回测框架，包括行情数据 ETL，策略研究，策略回测以及模拟交易；   
+量化策略研究及开发；    
+基于 Spark 的金融大数据分布式计算平台设计，研发，部署；
 
 ### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
+
+- #### 数据工程师
 负责应用后台数据 ETL，App Metrics 计算，分析，报告；    
 协助开发 A/B test 服务及结果分析报告；        
 APP 服务端开发。
 
 ### [通联数据股份公司](http://www.datayes.com/#/home) ( 2014年4月 ~ 2015年6月 )
 
-- #### [优矿社区](https://uqer.io/community/list)   
+- #### [优矿社区 | 后台工程师](https://uqer.io/community/list)   
 社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。  
 独自负责社区后端开发，与产品经理，前端开发共同讨论产品实现方案。提前、按时完成功能开发和测试，以 SOA 方式设计产品模块，尽力保证产品后期可扩展性，高可用性。
 
-- #### [通联信用评级](http://www.datayes.com/#/product?state=rating)
-信评是一个针对国内中小微企业的信用评分产品。个人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。并凭此项目获得公司Q2季度最佳新员工奖【公司人数200-250人，获奖人数5人】
-
+- #### [通联信用评级 | 后台工程师](http://www.datayes.com/#/product?state=rating)
+信评是一个针对国内中小微企业的信用评分产品。个人负责后端开发，首次详细地以敏捷开发的方式组织开发日志，在保证项目质量的前提前最大性地提高了开发速度。项目中使用svn, visio等辅助工具，采用python作为服务端语言，采用flask, restful, MongoDB作为主要框架和数据存储系统。项目之外，我还了解了一些对中小微企业进行信用评估方面的行业知识。
 
 技能清单
 ---  
 ---
 - 操作系统：Linux，Mac，Windows
-- 编程语言：Python/IPython，Erlang，C，Shell，C++，JS，HTML，CSS
-- 框架和库：Flask，Restful，OTP，Celery
+- 编程语言：Python/IPython，C，C++，Shell，Erlang，JS，HTML，CSS
+- 框架和库：Spark, Hadoop, Flask，Restful，OTP
 - 数据系统：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
 - 项目工具：Nginx，Vagrant, Visio，Gliffy，Phabricator
-- 技术研究：Quantitative investing, Spark，Machine Learning，Recommendation
+- 技术研究：Quantitative investing，Machine Learning，Recommendation
 - 项目管理：Svn，Git，Markdown，JIRA，Jenkins，Confluence
 
 技术分享  
@@ -63,29 +65,25 @@ APP 服务端开发。
 开源项目
 ---  
 ---
-[IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard)    
-一个轻量的 web server，用于对 csv 结构的数据进行不同类型的展示，分享，协作。最开始是为了弥补 ipython 在 dashboard 方面的不足。这个工具对大多数数据科学家，数据分析师比较有用。
-
+- [IPython-Dashboard](https://github.com/litaotao/IPython-Dashboard) : 一个轻量的 web server，用于对 csv 结构的数据进行不同类型的展示，分享，协作。最开始是为了弥补 ipython 在 dashboard 方面的不足。这个工具对大多数数据科学家，数据分析师比较有用。
+- [github-blog-template](https://github.com/litaotao/github-blog-template) : 我的 github 博客模版。
+- [ipython-notebook-spark](https://github.com/litaotao/ipython-notebook-spark) : 搭建 IPython + Spark 的开发平台资料和教程。
 
 业余爱好
 ---  
 ---
-- 航模，车模
-- 乒乓，跑步，台球
-- 读书思考，技术研究
+航模，车模，乒乓，跑步，台球，读书思考，技术研究
 
 曾获荣誉
 ---  
 ---  
-- 【通联数据股份公司】2014年Q2季度最佳新人奖;
+- 【通联数据股份公司】2014年 Q2 季度最佳新人奖【5人获奖，总共 220 人左右】;
+- 【通联数据股份公司】2016年 Q2 季度CEO特别奖【2人获奖，总共 260 人左右】;
 
 自我描述
 ---
 ---    
-- 爱好计算机技术，在不断巩固基础知识的同时关注各种前沿技术；   
-- 热情、团结，我相信只要团队中所有人的力量都在一个方向，就一定会有所成就；   
-- 热爱生活，我大部分业余时间都献给了看书，运动，技术学习，车模，航模；  
-- 兴趣广泛，在研究技术之余，学习到许多产品设计，推广，营销方面的知识；
+爱好计算机技术，关注各种前沿技术；擅长团队合作，努力挖掘团队最大生产力；喜欢看书，兴趣广泛，对航模，车模情有独钟；强调多向学习发展，技术，研究至于也协助其他部分做做运营，跑跑客户。
 
 致谢
 ---  
@@ -99,4 +97,4 @@ PDF 版下载
 ---
 
 谢谢，下载地址：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
-英文简历：[litaotao-developer-en](../resume-en)
+英文简历：[resume_en](../resume-en)
