--- a/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
+++ b/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
@@ -13,7 +13,7 @@ description: Spark 2.0 简单总结一下，用更少的代码，以更大的效
 其次，本系列是基于目前最新的 spark 1.6.0 系列开始的，spark 目前的更新速度很快，记录一下版本号还是必要的。   
 最后，如果各位觉得内容有误，欢迎留言备注，所有留言 24 小时内必定回复，非常感谢。
 
-Tips: 如果插图看起来不明显，可以：1. 放大网页；2. 新标签中打开图片，查看原图哦。
+Tips: 如果插图看起来不明显，可以：1. 放大网页；2. 新标签中打开图片，查看原图哦；3. 点击右边目录上方的 *present mode* 哦。
 
 
 ## 1. Spark 2.0 !
@@ -221,3 +221,4 @@ spark 2.0 性能上会有较大的提升，根据官方文档，2.0 会引入新
 - [『 Spark 』10. spark 应用程序性能优化｜12 个优化方法](http://litaotao.github.io/boost-spark-application-performance?s=inner)
 - [『 Spark 』11. spark 机器学习](http://litaotao.github.io/spark-mlib-machine-learning?s=inner)
 - [『 Spark 』12. Spark 2.0 特性介绍](http://litaotao.github.io/spark-2.0-faster-easier-smarter?s=inner)
+- [『 Spark 』13. Spark 2.0 Release Notes 中文版 ](http://litaotao.github.io/spark-2.0-release-notes-zh?s=inner)
