--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -24,9 +24,11 @@ description: My resume
 ### [通联数据股份公司](http://www.datayes.com/#/home) ( 2015年12月 ~  )
 
 - #### [优矿 | 量化工程师](uqer.io)
-设计，开发期货回测框架，包括行情数据 ETL，策略研究，策略回测以及模拟交易；   
-量化策略研究及开发；    
-基于 Spark 的金融大数据分布式计算平台设计，研发，部署；
+设计，开发股指，商品期货回测框架，包括行情数据 ETL，策略研究，回测，分析，模拟交易，实盘交易；      
+量化策略研究及开发；定期挖掘，研究，验证策略思路，一切以实盘为导向；    
+基于 Spark 的金融大数据分布式计算平台设计，研发，部署；支撑百GB级数据分析；    
+协助团队完成专业量化知识库编写；覆盖股票，期货期权等专业量化面，个人负责其中10%的内容；     
+配合运营，销售团队完成相关工作，每月拜访客户 5家左右；    
 
 ### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
 
@@ -83,7 +85,10 @@ APP 服务端开发。
 自我描述
 ---
 ---    
-爱好计算机技术，关注各种前沿技术；擅长团队合作，努力挖掘团队最大生产力；喜欢看书，兴趣广泛，对航模，车模情有独钟；强调多向学习发展，技术，研究至于也协助其他部分做做运营，跑跑客户。
+关注互联网，大数据与交融交叉领域，擅长团队合作，喜欢研究领域内相关公司及产品模式；
+兴趣广泛，对看书，航模，车模感兴趣；
+强调多向发展，也有协助运营，销售工作；
+
 
 致谢
 ---  
