--- a/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
+++ b/_posts/new-spark/2016-06-16-spark-2.0-faster-easier-smarter.md
@@ -222,3 +222,4 @@ spark 2.0 性能上会有较大的提升，根据官方文档，2.0 会引入新
 - [『 Spark 』11. spark 机器学习](http://litaotao.github.io/spark-mlib-machine-learning?s=inner)
 - [『 Spark 』12. Spark 2.0 特性介绍](http://litaotao.github.io/spark-2.0-faster-easier-smarter?s=inner)
 - [『 Spark 』13. Spark 2.0 Release Notes 中文版 ](http://litaotao.github.io/spark-2.0-release-notes-zh?s=inner)
+- [『 Spark 』14. 一次 Spark SQL 性能优化之旅](http://litaotao.github.io/spark-sql-parquet-optimize?s=inner)
