update chinese resume

--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -2,7 +2,7 @@
 category: work
 published: true
 layout: post
-title: My Resume
+title: My Resume CN 
 description: My resume
 ---
 
@@ -12,21 +12,24 @@ description: My resume
 - Github：[http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin：[https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - 当前职位：量化工程师
-- 联系方式：18202171279 ／ taotao.engineer#gmail.com
+- 联系方式：taotao.engineer#gmail.com
 
 
-目标
+目标及理念
 ---  
 ---
 
-- 在 Fintech 领域独当一面。
+- 在 Fintech 领域独当一面；
+- 删繁就简，简约而不简单；
+- 向 TOP 20 看齐，服务好 80% 的目标客户；
+- 少说废话，多干实事，事后留痕；
 
 
 工作经历
 ---  
 ---
 
-### [通联数据股份公司](http://www.datayes.com/#/home) ( 2015年12月 ~  )
+### [通联数据](http://www.datayes.com/#/home) ( 2015年12月 ~  )
 
 - #### [优矿 | 量化工程师](uqer.io)
 
@@ -34,8 +37,10 @@ description: My resume
 设计，开发股指，商品期货回测框架，包括行情数据 ETL，策略研究，回测，分析，模拟交易，实盘交易；      
 量化策略研究及开发；定期挖掘，研究，验证策略思路，一切以实盘为导向；    
 基于 Spark 的金融大数据分布式计算平台设计，研发，部署；支撑百GB级数据分析；    
-协助团队完成专业量化知识库编写；覆盖股票，期货期权等专业量化面，个人负责其中10%的内容；     
-配合运营，销售团队完成相关工作，每月拜访客户 5家左右；    
+协助团队完成专业量化知识库编写；覆盖股票，期货期权等专业量化面，个人负责其中10%的内容；      
+配合运营，销售团队完成相关工作，每月拜访客户 5家左右；         
+量化知识库内容设计，参与部分内容编写；       
+
 
 ### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
 
@@ -44,13 +49,12 @@ description: My resume
 >
 负责应用后台数据 ETL，App Metrics 计算，分析，报告；协助开发 A/B test 服务及结果分析报告；APP 服务端开发。
 
-### [通联数据股份公司](http://www.datayes.com/#/home) ( 2014年4月 ~ 2015年6月 )
+### [通联数据](http://www.datayes.com/#/home) ( 2014年4月 ~ 2015年6月 )
 
 - #### [优矿社区 | 后台工程师](https://uqer.io/community/list)
 
 >   
-社区是公司在线策略研究的分享平台，旨在为用户提供一个分享研究结果，提供交流渠道的平台。  
-独自负责社区后端开发，与产品经理，前端开发共同讨论产品实现方案。提前、按时完成功能开发和测试，以 SOA 方式设计产品模块，尽力保证产品后期可扩展性，高可用性。
+负责社区后端开发，与产品经理，前端开发共同讨论产品实现方案。提前、按时完成功能开发和测试，以 SOA 方式设计产品模块，尽力保证产品后期可扩展性，高可用性。
 
 - #### [通联信用评级 | 后台工程师](http://www.datayes.com/#/product?state=rating)
 
@@ -61,9 +65,10 @@ description: My resume
 技能清单
 ---  
 ---
-- 技术: Linux, Python, C/C++, Shell, JS, HTML, CSS, Spark, Hadoop, Flask, Restful, Mongo, MySQL, Redshift, Amazon S3, Redis, Nginx
+- 技术: Linux, Python, C/C++, Shell, JS, HTML, CSS
+- 框架: Spark, Hadoop, Flask, Restful, Mongo, MySQL, S3, Redis, Nginx
 - 工具: Svn, Git, Markdown, JIRA, Jenkins, Confluence
-- 行业: 量化投资, 公司财务, 金融工具, 大数据
+- 行业: 互联网金融, 大数据
 
 
 技术分享  
@@ -85,7 +90,7 @@ description: My resume
 业余爱好
 ---  
 ---
-航模，车模，乒乓，跑步，台球，读书思考，技术研究, 销售运营
+航模，车模，乒乓，跑步，台球，读书写作，技术研究, 销售运营
 
 
 曾获荣誉
@@ -106,6 +111,6 @@ description: My resume
 ---  
 ---
 
-读过的书：[resume_en](../resume-en)   
-中文简历：[resume-litaotao-SE](../files/litaotao-developer-cn.pdf)    
-英文简历：[resume_en](../resume-en)
+中文简历：[My Resume CN PDF](../files/litaotao-quant-cn.pdf)    
+英文简历：[My Resume EN PDF](../files/litaotao-quant-en.pdf)     
+英文简历：[My Resume EN Web](../resume-en)
